CSS code refactoring

--- a/views/adminDrugs.ejs
+++ b/views/adminDrugs.ejs
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/adminDrugs/adminDrugs.css">
     </head>
 <body>
-    <div class="adminDrugsContainer">
+    <div class="adminProductsContainer">
         <div class="top">
             <%- include('./partials/adminTabs.ejs')  %>
         </div>
