--- a/views/partials/adminTabs.ejs
+++ b/views/partials/adminTabs.ejs
@@ -5,7 +5,7 @@
     <a href="/admin/Dashboard">DASHBOARD</a>
     <a href="/admin/Feeds">FEEDS</a>
     <a href="/admin/Drugs">DRUGS</a>
-    <a href="/admin/Machinery">MACHINERY</a>
+    <a href="/admin/Machineries">MACHINERY</a>
     <a href="admin/Seeds">SEEDS</a>
 </div>
 <div class="right-2">
