--- a/views/adminMachineries.ejs
+++ b/views/adminMachineries.ejs
@@ -5,7 +5,7 @@
         
     </head>
 <body>
-    <div class="adminFeedsContainer">
+    <div class="adminProductsContainer">
         <div class="top">
             <%-include('./partials/adminTabs.ejs')  %>
         </div>
@@ -59,7 +59,7 @@
                             <th>QUANTITY</th>
                             <th>ACTION</th>
                         </tr>
-                       <% Feeds.forEach((Feed)=>{ %>
+                       <% Machineries.forEach((Machinery)=>{ %>
                         <tr>
                             <td><img src="data:image/png;base64,<%=Machinery.productImage%>" alt=""></td>
                             <td><%=Machinery.productName %></td>
@@ -70,7 +70,7 @@
                                 <div class="productDetail" id="detail-<%=Machinery._id %>">
                                     <p><button id="close"><i class="fa-solid fa-x"></i></button></p>
                                     <div>
-                                        <form action="/admin/feed/<%= Machinery._id %>/edit" method="post" enctype="multipart/form-data">
+                                        <form action="" method="post" enctype="multipart/form-data">
                                             <label for="image">MACHINERY IMAGE</label><br>
                                             <input type="file" id="image" name="productImage" value="<%= Machinery.productImage %>"><br>
         
@@ -90,7 +90,7 @@
                                         </form>
                                     </div>
                                 </div>
-                                <button onclick="confirmDeleteFeed('<%= Machinery._id %>')">DELETE</button>
+                                <button onclick="">DELETE</button>
                             </td>
                         </tr>
                
