--- a/views/adminSeeds.ejs
+++ b/views/adminSeeds.ejs
@@ -5,7 +5,7 @@
         
     </head>
 <body>
-    <div class="adminSeedsContainer">
+    <div class="adminProductsContainer">
         <div class="top">
             <%-include('./partials/adminTabs.ejs')  %>
         </div>
