--- a/views/adminSeeds.ejs
+++ b/views/adminSeeds.ejs
@@ -90,7 +90,7 @@
                                         </form>
                                     </div>
                                 </div>
-                                <button onclick="confirmDeleteFeed('<%= Feed._id %>')">DELETE</button>
+                                <button onclick="confirmDeleteFeed('<%= Seed._id %>')">DELETE</button>
                             </td>
                         </tr>
                
