--- a/views/partials/adminTabs.ejs
+++ b/views/partials/adminTabs.ejs
@@ -6,7 +6,7 @@
     <a href="/admin/Feeds">FEEDS</a>
     <a href="/admin/Drugs">DRUGS</a>
     <a href="/admin/Machineries">MACHINERY</a>
-    <a href="admin/Seeds">SEEDS</a>
+    <a href="/admin/Seeds">SEEDS</a>
 </div>
 <div class="right-2">
     <button onclick="showRight1()" id="openTab"><i class="fa-solid fa-bars"></i></button>
