--- a/public/commonStyles.css
+++ b/public/commonStyles.css
@@ -10,6 +10,9 @@ body {
 * a{
     text-decoration: none;
 }
+* input {
+    outline: none;
+}
 
 /* Common styles for the signup and login page */
 .homeContainer,
@@ -453,7 +456,8 @@ body {
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 10.5vh;
+        left: 0;
+        top: 10vh;
         background-color: rgb(255, 255, 255, 70%);
         display: none;
     }
@@ -533,7 +537,7 @@ body {
     }
     .adminContainer .body .body-top div,
     .adminProductsContainer .body .body-top div {
-        width: 55vw;
+        width: 65vw;
         padding: 3px;
         text-align: center;
     }
