--- a/public/shop/shop.css
+++ b/public/shop/shop.css
@@ -121,10 +121,68 @@
     padding-top: 2vh;
     padding-bottom: 2vh;
 }
+.shopContainer .body .feedsDiv,
+.shopContainer .body .drugsDiv,
+.shopContainer .body .seedsDiv,
+.shopContainer .body .machineriesDiv {
+    width: 90vw;
+    height: max-content;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3.7vw;
+}
+.shopContainer .body .feedsDiv .Feed,
+.shopContainer .body .drugsDiv .Drug,
+.shopContainer .body .seedsDiv .Seed,
+.shopContainer .body .machineriesDiv .Machinery {
+    width: 15vw;
+    height: max-content;
+    padding: 1vw;
+    border: 1px solid #B2BEB5;
+    border-radius: 10px;
+}
+.shopContainer .body .feedsDiv .Feed img,
+.shopContainer .body .drugsDiv .Drug img,
+.shopContainer .body .seedsDiv .Seed img,
+.shopContainer .body .machineriesDiv .Machinery img {
+    width: 13vw;
+    height: 20vh;
+    object-fit: cover;
+}
+.shopContainer .body .feedsDiv .Feed p:first-of-type,
+.shopContainer .body .drugsDiv .Drug p:first-of-type,
+.shopContainer .body .seedsDiv .Seed p:first-of-type,
+.shopContainer .body .machineriesDiv .Machinery p:first-of-type {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.shopContainer .body .feedsDiv .Feed p:nth-of-type(2),
+.shopContainer .body .drugsDiv .Drug p:nth-of-type(2),
+.shopContainer .body .seedsDiv .Seed p:nth-of-type(2),
+.shopContainer .body .machineriesDiv .Machinery p:nth-of-type(2) {
+    font-family: cursive;
+}
+.shopContainer .body .feedsDiv .Feed p:last-of-type,
+.shopContainer .body .drugsDiv .Drug p:last-of-type,
+.shopContainer .body .seedsDiv .Seed p:last-of-type,
+.shopContainer .body .machineriesDiv .Machinery p:last-of-type {
+    display: flex;
+    justify-content: center;
+}
+.shopContainer .body .feedsDiv .Feed p:last-of-type button,
+.shopContainer .body .drugsDiv .Drug p:last-of-type button,
+.shopContainer .body .seedsDiv .Seed p:last-of-type button,
+.shopContainer .body .machineriesDiv .Machinery p:last-of-type button {
+    background-color: #03C03C;
+    color: white;
+    border: none;
+    padding: 0.5vw;
+    border-radius: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
 @media only screen  and (max-width:900px){
        /* Media querying the shop Container */
-       .shopContainer .top {
+    .shopContainer .top {
         width: inherit;
         height: 10vh;
     }
