--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -38,7 +38,7 @@
                         <img src="data:image/png;base64,<%=Feed.productImage%>" alt="No image">
                         <p><%=Feed.productName %></p>
                         <p>Kshs. <%=Feed.productPrice %></p>
-                        <p><button class="add-to-cart" data-product-id="<%=Feed._id %>" onclick="addToCart('<%=Feed._id %>')">ADD TO CART</button></p>
+                        <p><button>ADD TO CART</button></p>
                     </div>
                     <% }) %>
                </div>
@@ -49,7 +49,7 @@
                         <img src="data:image/png;base64,<%=Drug.productImage%>" alt="No image">
                         <p><%=Drug.productName %></p>
                         <p>Kshs. <%=Drug.productPrice %></p>
-                        <p><button class="add-to-cart" data-product-id="<%=Drug._id %>" onclick="addToCart('<%=Drug._id %>')">ADD TO CART</button></p>
+                        <p><button>ADD TO CART</button></p>
                     </div>
                     <% }) %>
                </div>
@@ -60,7 +60,7 @@
                         <img src="data:image/png;base64,<%=Seed.productImage%>" alt="No image">
                         <p><%=Seed.productName %></p>
                         <p>Kshs. <%=Seed.productPrice %></p>
-                        <p><button class="add-to-cart" data-product-id="<%=Seed._id %>" onclick="addToCart('<%=Seed._id %>')">ADD TO CART</button></p>
+                        <p><button>ADD TO CART</button></p>
                     </div>
                     <% }) %>
                </div>
@@ -71,13 +71,13 @@
                         <img src="data:image/png;base64,<%=Machinery.productImage%>" alt="No image">
                         <p><%=Machinery.productName %></p>
                         <p>Kshs. <%=Machinery.productPrice %></p>
-                        <p><button class="add-to-cart" data-product-id="<%=Machinery._id %>" onclick="addToCart('<%=Seed._id %>')">ADD TO CART</button></p>
+                        <p><button>ADD TO CART</button></p>
                     </div>
                     <% }) %>
                </div>
         </div>
     </div>
-    <script src="commonJavascript.js"></script>
+    <script src="/commonJavascript.js"></script>
     <script src="/shop/shopJavascript.js"></script>
 </body>
 </html>
