--- a/views/loading.ejs
+++ b/views/loading.ejs
@@ -10,13 +10,13 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
+            background-color: #ffffff;
             flex-direction: column;
             font-family: Arial, Helvetica, sans-serif;
         }
         .loader {
             border: 5px solid #f3f3f3;
-            border-top: 5px solid #3498db;
+            border-top: 5px solid #03C03C;
             border-radius: 50%;
             width: 50px;
             height: 50px;
@@ -33,7 +33,7 @@
         p {
             margin-top: 10px;
             font-size: 18px;
-            color: #333;
+            color: #000000;
         }
     </style>
 </head>
