--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -19,7 +19,7 @@
                     <div class="cart">
                        <a href="">
                         <i class="fa-solid fa-bag-shopping"></i>
-                        <p id="cart-count"></p>
+                        <p id="cart-count"><%= cartItemCount  %></p>
                        </a>
                     </div>
                 </div>
